Fixed bug with bar graph name going off screen. Added A/B graph

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -26,7 +26,18 @@ a {
   vertical-align: top;
 }
 
+.cpi-form {
+  width: 100%;
+}
 
+#compare-div {
+  margin-top: 1%;
+  margin-bottom: 1%;
+}
+
+#cpi-header {
+  margin-top: 0.5%;
+}
 
 .compare-row {
   margin-bottom: 0.5%;
